# Data-Retrevial-Script

./: .gitignore  README.md  main.py  output.csv  output2.csv  pyproject.toml  urls.txt
output/: www.ncbi.nlm.nih.gov_genbank_release_234_ebf24880.txt  www.ncbi.nlm.nih.gov_genbank_release_235_fb2226bd.txt  www.ncbi.nlm.nih.gov_genbank_release_238_753a6300.txt  www.ncbi.nlm.nih.gov_genbank_release_239_724b7a2b.txt  www.ncbi.nlm.nih.gov_genbank_release_240_102a2e1c.txt  www.ncbi.nlm.nih.gov_genbank_release_241_9f55df54.txt  www.ncbi.nlm.nih.gov_genbank_release_242_afc939ba.txt  www.ncbi.nlm.nih.gov_genbank_release_243_0beb42e3.txt  www.ncbi.nlm.nih.gov_genbank_release_244_74694bb0.txt  www.ncbi.nlm.nih.gov_genbank_release_245_d466ebb4.txt  www.ncbi.nlm.nih.gov_genbank_release_246_c0494522.txt  www.ncbi.nlm.nih.gov_genbank_release_248_ce347eac.txt  www.ncbi.nlm.nih.gov_genbank_release_249_2c0f567c.txt  www.ncbi.nlm.nih.gov_genbank_release_250_27632b8f.txt  www.ncbi.nlm.nih.gov_genbank_release_251_484423d9.txt  www.ncbi.nlm.nih.gov_genbank_release_252_80e73f2e.txt  www.ncbi.nlm.nih.gov_genbank_release_255_e406416b.txt  www.ncbi.nlm.nih.gov_genbank_release_256_d0db024e.txt  www.ncbi.nlm.nih.gov_genbank_release_257_3fd4acdb.txt  www.ncbi.nlm.nih.gov_genbank_release_258_7ebff0a2.txt  www.ncbi.nlm.nih.gov_genbank_release_260_6300edba.txt  www.ncbi.nlm.nih.gov_genbank_release_262_51bfa3ee.txt  www.ncbi.nlm.nih.gov_genbank_release_263_0b0ef41e.txt  www.ncbi.nlm.nih.gov_genbank_release_265_780f594f.txt  www.ncbi.nlm.nih.gov_genbank_release_266_ff288c4c.txt  (+12 more)
raw/: release_100.txt  (+193 more)
(+4 files in other folders)
