[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-retrevial-script"
version = "0.1.0"
description = "Fetch and parse GenBank release notes into structured CSV output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32",
]

[project.scripts]
data-retrieval = "main:main"

[tool.setuptools]
py-modules = ["main"]
