[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-retrevial-script"
version = "0.1.0"
description = "Fetch GenBank release-note pages, archive raw pre-block text, and export structured CSV data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]

[project.scripts]
genbank-fetch = "main:main"
